--- a/usage-scenarios.tex
+++ b/usage-scenarios.tex
@@ -277,7 +277,7 @@ The \emph{guava} library makes an interesting case for library fission since it 
 
 We looked at the ``Synk Vulnerability DB" for \emph{guava}. We found two vulnerabilties, ``Information Disclosure" which affects the ``com.google.common.io" package and ``Deserialization of Untrusted Data" which affects the ``com.google.common.collect" package. When we combed through projects that depend on \emph{guava} using Github's advanced search, we found multiple projects that depend on the invulnerable packages of \emph{guava} and would potentially benefit from fissioning \emph{guava}, in terms of security vulnerabilities.
 
-We believe that library fission is potentially beneficial to developers. However, we expect developer resistance when it comes to making these changes in their libraries since they are breaking changes. We believe that the appropriate window to introduce fission changes is when other major breaking changes are being planned. The main breaking change that library fission introduces in a client is that the client needs to identify the submodules that it requires and import only those submodules. We expect no impacts on clients in terms of performance since we are only adding visibility limitations. The worst case that we foresee is that a client requires all the submodules of the library, in which case there is no difference from the previous version of the library that was not fissioned. We tested library fission on a subset of libraries and a random subset of their clients from our benchmarks--the unit test results were the same and we observed no change in build times.
+We believe that library fission is potentially beneficial to developers. However, we expect developer resistance when it comes to making these changes in their libraries since they are breaking changes. Tran et al ~\cite{tran2000architectural} look into repairing 2 open source systems (Linux and VIM) and Dr. Michael W. Godfrey explained to us that while the developers of these systems were appreciative of the changes they had made, they were still reluctant to accept them due to the fact that they were breaking changes (personal communication, September 21, 2022). We believe that the appropriate window to introduce fission changes is when other major breaking changes are being planned. The main breaking change that library fission introduces in a client is that the client needs to identify the submodules that it requires and import only those submodules. We expect no impacts on clients in terms of performance since we are only adding visibility limitations. The worst case that we foresee is that a client requires all the submodules of the library, in which case there is no difference from the previous version of the library that was not fissioned. We tested library fission on a subset of libraries and a random subset of their clients from our benchmarks--the unit test results were the same and we observed no change in build times.
 
 
 
