--- a/uw-ethesis-frontpgs.tex
+++ b/uw-ethesis-frontpgs.tex
@@ -73,7 +73,7 @@ I understand that my thesis may be made electronically available to the public.
 \begin{center}\textbf{Statement of Contributions}\end{center}
    \noindent
 This thesis consists mostly of chapters written for conference research paper submission
-(1 rejected, 1 accepted), with some word changes, styling updates and other modifications.
+(1 rejected, 1 accepted: VISSOFT 2022 NIER~\cite{venkatanarayananvizapi}), with some word changes, styling updates and other modifications.
 
 Sruthi Venkatanarayanan was the sole author for Chapter~\ref{sec:applications}, which was written under the
 supervision of Dr. Patrick Lam. Sruthi was responsible for developing the tool that performs the static and dynamic analyses, 
